Test Cases/V2/Test Case/Tests/TT-238 - VTO/Test Cases/Negative/TT_238_8_1YearPlan.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>TT_238_8_1YearPlan</name>
   <tag></tag>
   <comment></comment>
   <testCaseGuid>cfaa8fa0-d638-4daa-ac09-01ddd1c83851</testCaseGuid>
</TestCaseEntity>
